[package]
name = "seezee"
description = "A seekable `zstd` compressed buffer"
authors = ["Arpad Borsos <swatinem@swatinem.de>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
watto = "0.1.0"
zstd = { version = "0.13.0", features = ["experimental"] }

[dev-dependencies]
proptest = "1.4.0"
